# fableframe

./: .gitignore  LICENSE  README.md
server/: README.md  main.py  pyproject.toml  test_image_fixed.py  test_main.py  test_models.py  test_simple_image.py
server/.github/: copilot-instructions.md
server/module/: audio_enhance.py  image.py  text.py  util.py  video.py  voice.py
ui/: README.md  index.html  package-lock.json  package.json
ui/.github/: copilot-instructions.md
ui/src/: AnimationComponent.jsx  AnimationModal.css  AnimationUtil.js  App.css  App.jsx  AudioEnhancer.css  AudioEnhancer.jsx  ImageGenerationModal.css  MicrophoneRecorder.css  MicrophoneRecorder.jsx  MultiFrameAnimationModal.jsx  SoundMixerModal.css  SoundMixerModal.jsx  Toast.css  Toast.jsx  index.css
